kuber_ingress/deploy_frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: netology
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: srv-nginx
  namespace: netology
spec:
  ports:
    - name: nginx
      port: 80
  selector:
    app: nginx
